test/tests/stages/14_pointers/valid/declarators/abstract_declarators.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[120]:
  int
  identifier(main)
  (
  void
  )
  {
  long
  int
  unsigned
  *
  identifier(x)
  =
  const int(0)
  ;
  if
  (
  identifier(x)
  !=
  (
  unsigned
  long
  (
  *
  )
  )
  const int(0)
  )
  return
  const int(1)
  ;
  if
  (
  identifier(x)
  !=
  (
  long
  unsigned
  int
  (
  (
  (
  (
  *
  )
  )
  )
  )
  )
  const int(0)
  )
  return
  const int(2)
  ;
  double
  *
  *
  *
  identifier(y)
  =
  const int(0)
  ;
  if
  (
  identifier(y)
  !=
  (
  double
  *
  (
  *
  *
  )
  )
  const int(0)
  )
  return
  const int(3)
  ;
  if
  (
  identifier(y)
  !=
  (
  double
  (
  *
  *
  *
  )
  )
  const int(0)
  )
  return
  const int(4)
  ;
  if
  (
  (
  double
  (
  *
  (
  *
  (
  *
  )
  )
  )
  )
  const int(0)
  !=
  identifier(y)
  )
  return
  const int(5)
  ;
  return
  const int(0)
  ;
  }
