test/tests/stages/14_pointers/invalid_types/multiply_pointers.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[28]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  *
  identifier(x)
  =
  const int(0)
  ;
  int
  *
  identifier(y)
  =
  identifier(x)
  ;
  (
  identifier(x)
  *
  identifier(y)
  )
  ;
  return
  const int(0)
  ;
  }
